tests/system/timmutableinc.nim
discard """
  errormsg: "type mismatch: got <int>"
  file: "timmutableinc.nim"
  line: 8
"""
var x = 0

inc(x+1)
